# Rubik-s-Cube-Solver

./: README.md  package-lock.json
cube-frontend/: package-lock.json  package.json  server.js
cube-frontend/public/: index.html
cube-frontend/public/src/: CubeScene.js  main.js
rubiks-cube-solver-main/: CMakeLists.txt  README.md  TROUBLESHOOTING.md  app.py  main.cpp  test_solver.py
rubiks-cube-solver-main/Model/: RubiksCube.cpp  RubiksCubeBitboard.cpp  RubiksCubeBitboard.h
rubiks-cube-solver-main/PatternDatabases/: CornerDBMaker.h
rubiks-cube-solver-main/static/: app.js  style.css
rubiks-cube-solver-main/templates/: index.html
